Added 'States' to entity list.

--- a/nodes/listSap.html
+++ b/nodes/listSap.html
@@ -301,6 +301,7 @@
       <option value="ServiceContracts">ServiceContracts</option>
       <option value="ServiceGroups">ServiceGroups</option>
       <option value="ShippingTypes">ShippingTypes</option>
+      <option value="States">States</option>
       <option value="StockTransferDrafts">StockTransferDrafts</option>
       <option value="StockTransfers">StockTransfers</option>
       <option value="TargetGroups">TargetGroups</option>
